--- a/Develop/index.html
+++ b/Develop/index.html
@@ -36,7 +36,7 @@
 
 <!-- Hero Start -->
 
-    <div title="Horiseon employees working" class="hero"></div>
+    <div img src="./assets.images/digital-marketing-meeting.jpg" alt="Horiseon employees working" class="hero"></div>
 
     <!-- Hero End -->
 
